--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1374,12 +1374,12 @@
 
                 <!-- Right Side - Images -->
                 <div class="switch-card-right" style="position: relative; height: 600px; border-radius: 12px; overflow: hidden; box-shadow: 0 20px 60px rgba(0,0,0,0.15); background: #f5f5f5;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="快餐服务" class="switch-card-image active" data-index="0" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 1; transition: opacity 0.5s ease;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131951.png" alt="正餐服务" class="switch-card-image" data-index="1" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 132040.png" alt="茶饮甜品店" class="switch-card-image" data-index="2" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 132010.png" alt="智能炒菜餐厅" class="switch-card-image" data-index="3" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131913.png" alt="火锅自助餐" class="switch-card-image" data-index="4" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="连锁餐饮" class="switch-card-image" data-index="5" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-dashboard.png" alt="快餐服务" class="switch-card-image active" data-index="0" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 1; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-robot-control.png" alt="正餐服务" class="switch-card-image" data-index="1" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-customer-management.png" alt="茶饮甜品店" class="switch-card-image" data-index="2" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-delivery-aggregation.png" alt="智能炒菜餐厅" class="switch-card-image" data-index="3" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-ai-assistant.png" alt="火锅自助餐" class="switch-card-image" data-index="4" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/synapse-dashboard.png" alt="连锁餐饮" class="switch-card-image" data-index="5" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
                 </div>
             </div>
         </div>
@@ -1470,7 +1470,7 @@
             <!-- Screenshot 1: AI Assistant -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131913.png" alt="Synapse AI 助手" loading="lazy">
+                    <img src="assets/screenshots/synapse-ai-assistant.png" alt="Synapse AI 助手" loading="lazy">
                 </div>
                 <div class="screenshot-content">
                     <h3>AI 神经中枢</h3>
@@ -1485,14 +1485,14 @@
                     <p>一屏掌握全局运营数据。今日订单数、营业额、客单价、完成率，关键指标实时刷新。智能化数据洞察，助力精准决策。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="实时仪表盘" loading="lazy">
+                    <img src="assets/screenshots/synapse-dashboard.png" alt="实时仪表盘" loading="lazy">
                 </div>
             </div>
 
             <!-- Screenshot 3: Panshaker Robot Control -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 131951.png" alt="Panshaker 机器人控制中心" loading="lazy">
+                    <img src="assets/screenshots/synapse-robot-control.png" alt="Panshaker 机器人控制中心" loading="lazy">
                 </div>
                 <div class="screenshot-content">
                     <h3>Panshaker 智能炒锅</h3>
@@ -1507,14 +1507,14 @@
                     <p>一个界面统管所有外卖订单。无缝对接 Uber Eats、DoorDash、饿了么等主流平台，告别多平板混乱。自动接单、智能调度，让外卖运营更高效。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 132010.png" alt="外卖聚合平台" loading="lazy">
+                    <img src="assets/screenshots/synapse-delivery-aggregation.png" alt="外卖聚合平台" loading="lazy">
                 </div>
             </div>
 
             <!-- Screenshot 5: Customer Management -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="assets/screenshots/屏幕截图 2026-01-28 132040.png" alt="顾客管理系统" loading="lazy">
+                    <img src="assets/screenshots/synapse-customer-management.png" alt="顾客管理系统" loading="lazy">
                 </div>
                 <div class="screenshot-content">
                     <h3>口味数字孪生</h3>
@@ -1605,10 +1605,10 @@
                 <video 
                     controls 
                     preload="metadata" 
-                    poster="assets/screenshots/屏幕截图 2026-01-28 131934.png"
+                    poster="assets/screenshots/synapse-dashboard.png"
                     playsinline
                     controlslist="nodownload">
-                    <source src="assets/screenshots/屏幕录制 2026-01-28 131820.mp4" type="video/mp4">
+                    <source src="assets/screenshots/synapse-demo.mp4" type="video/mp4">
                     您的浏览器不支持 HTML5 视频播放。请升级您的浏览器。
                 </video>
             </div>
